# NeuralNetworks

./: .gitignore  .gitmodules  ActivationFunction.h  CMakeLists.txt  Dataset.h  DefaultFunctions.h  EuclideanLossFunction.cpp  Layer.cpp  Layer.h  LossFunction.h  Model.cpp  Model.h  NeuralNetworksTypes.h  ReLU.cpp  Scheduler.h  main.cpp  vector.h
